--- a/train.css
+++ b/train.css
@@ -1,33 +1,73 @@
-*{
-    padding:0;
-    margin:0;
-}
-body{
-    background-color:#000;
-}
-td{
-    width:20px;
-    height:20px;
+/*body{*/
+    /*background-color:#000;*/
+/*}*/
+
+body {
+    font: 24px Helvetica;
+    background: #999999;
 }
 
-.blank{
-    background-color:black;
-}
-.train{
-    background-color:white;
-}
-
-.wall{
-    background-color:green;
-}
-.fruit{
-    background-color:red;
+#main {
+    min-height: 800px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-flow: row;
 }
 
-.door_close{
-    background-color:red;
+#main > article {
+    margin: 4px;
+    padding: 5px;
+    border-radius: 7pt;
+    background: #000000;
+    flex: 3 1 60%;
+    order: 2;
 }
 
-.door_open{
-    background-color:yellowgreen;
+#main > nav {
+    margin: 4px;
+    padding: 5px;
+    border: 1px solid #8888bb;
+    border-radius: 7pt;
+    background: #ccccff;
+    flex: 1 6 20%;
+    order: 1;
+}
+
+#main > aside {
+    margin: 4px;
+    padding: 5px;
+    border: 1px solid #8888bb;
+    border-radius: 7pt;
+    background: #ccccff;
+    flex: 1 6 20%;
+    order: 3;
+}
+
+header, footer {
+    display: block;
+    margin: 4px;
+    padding: 5px;
+    min-height: 100px;
+    border: 1px solid #eebb55;
+    border-radius: 7pt;
+    background: #ffeebb;
+}
+
+/* Too narrow to support three columns */
+@media all and (max-width: 640px) {
+    #main, #page {
+        flex-direction: column;
+    }
+
+
+    #main > article, #main > nav, #main > aside {
+        /* Return them to document order */
+        order: 0;
+    }
+
+    #main > nav, #main > aside, header, footer {
+        min-height: 50px;
+        max-height: 50px;
+    }
 }
