--- a/train.css
+++ b/train.css
@@ -20,7 +20,7 @@ body {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-#main > section {
+#main > div {
     margin: 4px;
     padding: 5px;
     border-radius: 7pt;
